added login function

--- a/account.html
+++ b/account.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="public/fonts/fonts.css">
   <title>Beaty</title>
 </head>
-
 <body>
   <header class="header">
     <div class="header__container">
@@ -34,7 +32,7 @@
         </ul>
       </nav>
       <div class="header__login">
-        <button type="button" class="login__button login__button--usual">Login</button>
+        <button type="button" class="login__button login__button--usual visible">Login</button>
         <div class="header__user">
           <p class="user__name"></p>
           <button type="button" class="sign-out__button login__button--usual">Sign out</button>
@@ -91,6 +89,8 @@
     </div>
   </header>
 
+  <h1>Welcome!</h1>
+
   <script src="public/js/set_username_in_header.js"></script>
   <script src="public/js/app.js"></script>
   <script src="public/js/modal.js"></script>
@@ -100,5 +100,4 @@
   </script>
 
 </body>
-
 </html>
