Added "reserve" modal window and added Date restrictions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p class="user__name"></p>
           <button type="button" class="sign-out__button login__button--usual">Sign out</button>
         </div>
-        <div class="header__modal">
+        <div class="header__modal modal">
           <div class="modal__content">
             <span class="modal__close">&times;</span>
             <div class="modal__tabs">
@@ -91,6 +91,8 @@
     </div>
   </header>
 
+  <script src="public/js/service_functions.js"></script>
+  <script src="public/js/add_setObj_to_Storage_prototype.js"></script>
   <script src="public/js/set_username_in_header.js"></script>
   <script src="public/js/app.js"></script>
   <script src="public/js/modal.js"></script>
