--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <header class="header">
     <div class="header__container">
-      <div class="header__logo">
+      <a href="./index.html" class="header__logo">
         <h1 class="logo__heading">Beaty</h1>
         <p class="logo__para">please yourself</p>
-      </div>
+      </a>
       <nav class="header__nav">
         <ul class="nav__list">
           <a href="#" class="nav__list-link">
@@ -36,7 +36,7 @@
       <div class="header__login">
         <button type="button" class="login__button login__button--usual">Login</button>
         <div class="header__user">
-          <p class="user__name"></p>
+          <a href="./account.html" class="user__name"></a>
           <button type="button" class="sign-out__button login__button--usual">Sign out</button>
         </div>
         <div class="header__modal modal">
