Added checks for registry

--- a/account.html
+++ b/account.html
@@ -65,6 +65,7 @@
             <div class="modal__register tabs-item">
               <label for="register__username" class="form__label username__label-register">Username:</label>
               <p class="register__error-username error">Sorry, this username is already in use!</p>
+              <p class="register__error-username-short error">Sorry, username is too short!</p>
               <input type="text" class="register__username form__text" id="register__username" placeholder="myusername" required>
 
               <label for="register__email" class="form__label email__label-register">Email adress:</label>
