app.js refactor and codestyle fixes

--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
               <p class="login__error-password error">Wrong password!</p>
               <input type="password" class="login__password form__text" placeholder="pass" required>
 
-              <input type="checkbox" class="login__remember" id="login__remember">
-              <label for="login__remember" class="form__label">Remember me?</label>
-
               <input type="submit" class="login__submit login__button--usual form__submit-btn" value="Login">
             </div>
 
@@ -75,7 +72,7 @@
 
               <label for="register__email" class="form__label email__label-register">Email adress:</label>
               <p class="register__error-email error">Sorry, this Email is already in use!</p>
-              <p class="register__error-email-short error">Sorry, Email is too short!</p>
+              <p class="error register__error-email-short">Sorry, Email is too short!</p>
               <input type="email" class="register__email form__text" id="register__email" placeholder="joedoe@mail.com" required>
 
               <label for="register__pasword" class="form__label password__label-register">Password:</label>
@@ -184,7 +181,6 @@
   </footer>
 
   <script src="public/js/service_functions.js"></script>
-  <script src="public/js/add_setObj_to_Storage_prototype.js"></script>
   <script src="public/js/set_username_in_header.js"></script>
   <script src="public/js/app.js"></script>
   <script src="public/js/modal.js"></script>
