Fixed console errors

--- a/account.html
+++ b/account.html
@@ -21,7 +21,7 @@
       </a>
       <nav class="header__nav">
         <ul class="nav__list">
-          <a href="#" class="nav__list-link nav__menu" onclick="responsive()">
+          <a href="#" class="nav__list-link nav__menu" onclick="service.responsive()">
             <li class="nav__list-item">Menu</li>
           </a>
           <a href="#" class="nav__list-link">
@@ -240,7 +240,7 @@
   <script src="public/js/service_functions.js"></script>
   <script src="public/js/set_username_in_header.js"></script>
   <script src="public/js/app.js"></script>
-  <script src="public/js/modal.js"></script>
+  <script src="public/js/account.js"></script>
   <script src="public/js/reserve_modal.js"></script>
   <script src="public/js/tabs.js"></script>
 
