Added proper README.md

--- a/account.html
+++ b/account.html
@@ -144,6 +144,7 @@
               maxlength="17" required>
 
             <button type="button" class="make-reservation__button login__button--usual">Reserve</button>
+            <p class="make-reservation__message">Our operator will call you to set up the convenient time for your visit.</p>
 
           </form>
         </div>
@@ -237,7 +238,7 @@
     </ul>
   </footer>
 
-  <script src="public/js/service_functions.js"></script>
+  <script src="public/js/service.js"></script>
   <script src="public/js/set_username_in_header.js"></script>
   <script src="public/js/app.js"></script>
   <script src="public/js/account.js"></script>
