--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </ul>
   </footer>
 
-  <script src="public/js/service_functions.js"></script>
+  <script src="public/js/service.js"></script>
   <script src="public/js/set_username_in_header.js"></script>
   <script src="public/js/app.js"></script>
   <script src="public/js/modal.js"></script>
