repaired login through email + other fixes

--- a/account.html
+++ b/account.html
@@ -95,6 +95,7 @@
             <input type="tel" class="reserve__phone form__text" id="reserve__phone" placeholder="8 (900) 111-22-22" pattern="^\d\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}$"
               maxlength="17" required>
 
+            <p class="reserve__fill-error error">Please, fill in all the fields to make reservation.</p>
             <button type="button" class="make-reservation__button login__button--usual">Reserve</button>
             <p class="make-reservation__message">Our operator will call you to set up the convenient time for your visit.</p>
 
