test structure changes

--- a/account/index.html
+++ b/account/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="public/css/app.css">
-  <link rel="stylesheet" href="public/fonts/fonts.css">
-  <link rel="shortcut icon" type="image/png" href="public/img/favicon_s.png"/>
+  <link rel="stylesheet" href="../public/css/app.css">
+  <link rel="stylesheet" href="../public/fonts/fonts.css">
+  <link rel="shortcut icon" type="image/png" href="../public/img/favicon_s.png"/>
   <title>Beaty</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
@@ -16,7 +16,7 @@
 <body>
   <header class="header">
     <div class="header__container">
-      <a href="./index.html" class="header__logo">
+      <a href="../" class="header__logo">
         <h1 class="logo__heading">Beaty</h1>
         <p class="logo__para">please yourself</p>
       </a>
@@ -125,7 +125,7 @@
             energy and healing.</p>
         </div>
         <div class="service__image">
-          <img src="public/img/massage.jpg" alt="Massage Therapy" class="image__item img__item-massage">
+          <img src="../public/img/massage.jpg" alt="Massage Therapy" class="image__item img__item-massage">
         </div>
       </div>
 
@@ -136,7 +136,7 @@
             foot hydration.</p>
         </div>
         <div class="service__image">
-          <img src="public/img/facial.jpg" alt="Facial" class="image__item img__item-facial">
+          <img src="../public/img/facial.jpg" alt="Facial" class="image__item img__item-facial">
         </div>
       </div>
 
@@ -147,7 +147,7 @@
             energy and healing.</p>
         </div>
         <div class="service__image">
-          <img src="public/img/body.jpg" alt="Body Treatments" class="image__item img__item-body">
+          <img src="../public/img/body.jpg" alt="Body Treatments" class="image__item img__item-body">
         </div>
       </div>
 
@@ -157,7 +157,7 @@
           <p class="service__description">Our full-service spa offers makeup and waxing services.</p>
         </div>
         <div class="service__image">
-          <img src="public/img/makeup.jpg" alt="Makeup and Waxing" class="image__item img__item-makeup">
+          <img src="../public/img/makeup.jpg" alt="Makeup and Waxing" class="image__item img__item-makeup">
         </div>
       </div>
     </aside>
@@ -191,9 +191,9 @@
     </ul>
   </footer>
 
-  <script src="public/js/service.js"></script>
-  <script src="public/js/app.js"></script>
-  <script src="public/js/account.js"></script>
+  <script src="../public/js/service.js"></script>
+  <script src="../public/js/app.js"></script>
+  <script src="../public/js/account.js"></script>
 
 </body>
 
