Testing structure changes

--- a/account/index.html
+++ b/account/index.html
@@ -25,7 +25,7 @@
           <a href="#" class="nav__list-link nav__menu" onclick="service.responsive()">
             <li class="nav__list-item">Menu</li>
           </a>
-          <a href="index.html" class="nav__list-link">
+          <a href="../" class="nav__list-link">
             <li class="nav__list-item">Home</li>
           </a>
           <a href="#" class="nav__list-link">
@@ -42,7 +42,7 @@
       <div class="header__login">
         <button type="button" class="login__button login__button--usual visible">Login</button>
         <div class="header__user">
-          <a href="./account.html" class="user__name"></a>
+          <a href="./account" class="user__name"></a>
           <button type="button" class="sign-out__button login__button--usual">Sign out</button>
         </div>
       </div>
