--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="header__login">
         <button type="button" class="login__button login__button--usual">Login</button>
         <div class="header__user">
-          <a href="./account.html" class="user__name"></a>
+          <a href="./account" class="user__name"></a>
           <button type="button" class="sign-out__button login__button--usual">Sign out</button>
         </div>
         <div class="header__modal modal">
