Fix bug when you can choose every date if you type it manually

--- a/account/index.html
+++ b/account/index.html
@@ -87,6 +87,7 @@
             <label for="reserve__date" class="form__label date__label-reserve">Date:</label>
             <!-- <p class="reserve__error-workday error">Please, choose date of your visit.</p> -->
             <input id="date" type="date" class="reserve__date form__text" id="reserve__date" min="" max="">
+            <p class="reserve__date-error error">You can only reserve visit for 30 days by now.</p>
 
             <label for="reserve__phone" class="form__label phone__label-reserve">Your phone number:
               <span class="phone__hint">*format: 8 (900) 111-22-22</span>
